# EmbeddedLinuxKitchen

./: README.md
0X-Donut/: README.md
0X-Scripts/: README.md  linux.sh  qemu_vex.sh  vex_cfg_busy.sh
4-rpi_bare/: CMakeLists.txt  blink.img  disassemble.s  led.s
5-bootscript/: Rpi3B-bootscript  scr.txt
6-init/: README.md  inittab
Emulated SD card/: QEMU_Record.webm
donut_init/: a.out  init
rpi_bare_test/: blink.elf  blink.img  kernel8.img  led.elf  led.s  linker.ld  main.c  start.s  test.elf  test.img  test.s
scripts_playground/: README.md  linux.sh  qemu_vex.sh  qemu_vex_debug.sh  qemu_vex_uboot.sh  qemu_vex_uboot_debug.sh  tty.sh  u_boot.sh  vex_build_u_boot.sh  vex_cfg_linux.sh  vex_cfg_u_boot.sh
silly_init/: README.md
